fix SPARK-37072